[package]
name = "control-contre-rs"
edition = "2021"
version = "0.1.0"

[dependencies]
ahash = "0.8.3"
async-mutex = "1.4.0"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = "0.4.26"
circular-buffer = "0.1.1"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
iced_lazy = "0.6.1"
interpolator = "0.5.0"
lazy_static = "1.4.0"
open = "5.0.0"
qcell = "0.5.3"
rayon = "1.7.0"
regex = { version = "1.8.4", features = ["pattern"] }
rfd = "0.11.4"
run = "0.1.0"
russh-keys = "0.37.1"
smol_str = { version = "0.2.0", features = ["serde"] }
standard_paths = "2.0.1"
tokio-scoped = "0.2.0"
toml = { version = "0.7.5", features = ["parse"] }

[dependencies.compact_str]
version = "0.7.1"
features = ["rkyv"]
optional = false

[dependencies.iced]
version = "0.9.0"
features = ["wgpu", "tokio", "image"]
optional = false
default-features = false

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
features = []
optional = false

[dependencies.indexmap]
version = "2.0.0"
features = ["serde"]
optional = false

[dependencies.russh]
version = "0.37.1"
features = ["openssl"]
optional = false

[dependencies.serde]
version = "1.0.164"
features = ["serde_derive", "rc"]
optional = false

[dependencies.tokio]
version = "1.28.2"
features = ["time"]
optional = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

